pkgs/ffigen/test/header_parser_tests/expected_bindings/_expected_opaque_dependencies_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Opaque Dependencies Test
class NativeLibrary {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeLibrary.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  ffi.Pointer<BAlias> func(ffi.Pointer<A> a) {
    return _func(a);
  }

  late final _funcPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<BAlias> Function(ffi.Pointer<A>)>>(
        'func',
      );
  late final _func = _funcPtr
      .asFunction<ffi.Pointer<BAlias> Function(ffi.Pointer<A>)>();

  ffi.Pointer<UB> func2(ffi.Pointer<UA> a) {
    return _func2(a);
  }

  late final _func2Ptr =
      _lookup<ffi.NativeFunction<ffi.Pointer<UB> Function(ffi.Pointer<UA>)>>(
        'func2',
      );
  late final _func2 = _func2Ptr
      .asFunction<ffi.Pointer<UB> Function(ffi.Pointer<UA>)>();
}

final class A extends ffi.Struct {
  @ffi.Int()
  external int a;

  static ffi.Pointer<A> $allocate(ffi.Allocator $allocator, {required int a}) =>
      $allocator<A>()..ref.a = a;
}

final class B extends ffi.Struct {
  @ffi.Int()
  external int a;

  static ffi.Pointer<B> $allocate(ffi.Allocator $allocator, {required int a}) =>
      $allocator<B>()..ref.a = a;
}

typedef BAlias = B;

final class C extends ffi.Struct {
  @ffi.Int()
  external int a;

  external ffi.Pointer<NoDefinitionStructInC> nds;

  static ffi.Pointer<C> $allocate(
    ffi.Allocator $allocator, {
    required int a,
    required ffi.Pointer<NoDefinitionStructInC> nds,
  }) => $allocator<C>()
    ..ref.a = a
    ..ref.nds = nds;
}

final class D extends ffi.Struct {
  @ffi.Int()
  external int a;

  external ffi.Pointer<NoDefinitionStructInD> nds;

  static ffi.Pointer<D> $allocate(
    ffi.Allocator $allocator, {
    required int a,
    required ffi.Pointer<NoDefinitionStructInD> nds,
  }) => $allocator<D>()
    ..ref.a = a
    ..ref.nds = nds;
}

final class DArray extends ffi.Struct {
  @ffi.Int()
  external int a;

  external ffi.Pointer<NoDefinitionStructInD> nds;

  static ffi.Pointer<DArray> $allocate(
    ffi.Allocator $allocator, {
    required int a,
    required ffi.Pointer<NoDefinitionStructInD> nds,
  }) => $allocator<DArray>()
    ..ref.a = a
    ..ref.nds = nds;
}

final class E extends ffi.Struct {
  external ffi.Pointer<C> c;

  external D d;

  @ffi.Array.multi([10])
  external ffi.Array<DArray> dArray;
}

final class NoDefinitionStructInC extends ffi.Opaque {}

final class NoDefinitionStructInD extends ffi.Opaque {}

final class UA extends ffi.Union {
  @ffi.Int()
  external int a;
}

final class UB extends ffi.Union {
  @ffi.Int()
  external int a;
}

final class UC extends ffi.Union {
  @ffi.Int()
  external int a;
}

final class UD extends ffi.Union {
  @ffi.Int()
  external int a;
}

final class UDArray extends ffi.Union {
  @ffi.Int()
  external int a;
}

final class UE extends ffi.Union {
  external ffi.Pointer<UC> c;

  external UD d;

  @ffi.Array.multi([10])
  external ffi.Array<UDArray> dArray;
}
